@@ -1,3 +1,4 @@
+* Add shipped state to customer shipment
 
 Version 7.2.0 - 2024-04-29
 --------------------------
